--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<script src="pouchdb-9.0.0.min.js"></script>
-<script>
-  const db = new PouchDB('my_database');
-</script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Offline iOS Demo</title>
+    <link rel="manifest" href="manifest.json">
+  </head>
+  <body>
+    <script src="pouchdb-9.0.0.min.js"></script>
+    <script src="app.js"></script>
+  </body>
+</html>
