--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="manifest" href="manifest.json">
   </head>
   <body>
+    <h1>Offline iOS PWA</h1>
+    <h3>Your geolocation</h3>
+    <p id="status">Fetching location...</p>
+    <pre id="output"></pre>
     <script src="pouchdb-9.0.0.min.js"></script>
     <script src="app.js"></script>
   </body>
