--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Offline iOS Demo</title>
+    <title>Offline iOS Demo test</title>
     <link rel="manifest" href="manifest.json">
   </head>
   <body>
