--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Offline iOS Demo test</title>
+    <title>Offline iOS Demo</title>
     <link rel="manifest" href="manifest.json">
   </head>
   <body>
-    <h1>Offline iOS PWA</h1>
+    <h1>Offline iOS PWA test</h1>
     <h3>Your geolocation</h3>
     <p id="status">Fetching location...</p>
     <pre id="output"></pre>
