--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h3>Your geolocation</h3>
     <p id="status">Fetching location...</p>
     <pre id="output"></pre>
+    <h3>Last known time</h3>
+    <pre id="time"></pre>
     <script src="pouchdb-9.0.0.min.js"></script>
     <script src="app.js"></script>
   </body>
